--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	
-	<!-- <script src="js/pow.js"></script> -->
+	<script src="js/pow.js"></script>
 	<script src="js/arr.js"></script>
 </body>
 </html>
